--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-show-more-text": "^1.4.6",
     "rupiah-format": "^1.0.0",
+    "socket.io-client": "^4.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
